<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChargeUpLogin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">ChargeUp Register</string>
    <string name="uname">User Name</string>
    <string name="textview">User Name</string>
    <string name="strpassword">Password</string>
    <string name="textview1">Password</string>
    <string name="strregister">Sign Up</string>
    <string name="strlogin">Sign In</string>
    <string name="strreset">Forget Password</string>
    <string name="registertochargeup">Register to Chargeup</string>
    <string name="strFirstname">Firstname</string>
    <string name="str_Firstname">Firstname</string>
    <string name="strLastname">Lastname</string>
    <string name="str_Lastname">Lastname</string>
    <string name="strEmail">*Email</string>
    <string name="str_Email">Email</string>
    <string name="strUsername">*Username</string>
    <string name="str_Username">Username</string>
    <string name="strPassword">Password</string>
    <string name="str_Password">*Password</string>
    <string name="strRegister">Register</string>
    <string name="strBacktologin">Back to Login</string>
    <string name="title_activity_registered">ChargeUp Registered</string>
    <string name="details_registered">Your Registration Details</string>
    <string name="Username_registered">Username</string>
    <string name="email_registered">email</string>
    <string name="firstname_registered">First Name</string>
    <string name="lastname_registered">Last Name</string>
    <string name="backtologin_registered">Back to Login</string>
    <string name="success_login">You have Successfully Registered</string>
    <string name="title_activity_login">ChargeUp Login</string>
    <string name="logout_login">Logout</string>
    <string name="changeps_login">Change Password</string>
    <string name="updateinfo_login">Update Info</string>
    <string name="myaccount_login">My Account</string>
    <!-- <string name="userinfo_login">User Panel</string> -->
    <string name="title_activity_updateinfo">ChargeUp UpdateInfo</string>
    <string name="strFname_update">new Firstname</string>
    <string name="strLname_update">new Lastname</string>
    <string name="strFname_update_e">Firstname</string>
    <string name="strLname_update_e">Lastname</string>
    <string name="strUpdate">Update</string>
    <string name="strCancel">Go Back</string>
    <string name="title_activity_resetpassword">ChargeUp:ResetPassword</string>
    <string name="str_textview1_reset">Reset your password</string>
    <string name="str_textview2_reset">Enter your username and email</string>
    <string name="str_username_reset">username</string>
    <string name="str_email_reset">email</string>
    <string name="str_username_reset_e">username</string>
    <string name="str_email_reset_e">email</string>
    <string name="str_btnReset_reset">Reset</string>
    <string name="str_btnCancel_reset">Cancel</string>
    <string name="title_activity_register_charger">ChargeUp: RegisterCharger</string>
    <string name="str_deleteCharger_login">Delete Charger</string>
    <string name="str_registerCharger_login">Register Charger</string>
    <string name="str_deviceid_registerCh">Device Id</string>
    <string name="str_deviceid_registerCh_e">charge type</string>
    <string name="str_RegisterCharger">Register Charger</string>
    <string name="str_btnCancel_RegisterCh">Go Back</string>
    <string name="title_activity_delete_charger">ChargeUp: Delete Charger</string>
    <string name="str_btnCancel_deleteCh">Go Back</string>
    <string name="findcharger_login">Find Charger</string>
    <string name="title_activity_changepassword">ChargeUp: Changepassword</string>
    <string name="str_oldps">Old Password</string>
    <string name="str_oldps_e">Old Password</string>
    <string name="str_newps">New Password</string>
    <string name="str_newps_e">New Password</string>
    <string name="str_newps2">Repeat Password</string>
    <string name="str_newps2_e">New Password</string>
    <string name="str_btnChpassword">Change Password</string>
    <string name="str_btnGoback_chpass">Go Back</string>
    <string name="str_avatar_update">Avatar</string>
    <string name="str_avatar_update_e">Update Avatar</string>
    <string name="str_score_update">score</string>
    <string name="str_score_update_e">score</string>
    <string name="str_bio_update">bio</string>
    <string name="str_bio_update_e">bio</string>
    <string name="str_major_update">major</string>
    <string name="str_major_update_e">major</string>
    <!-- <string name="spinner3_title">spinner3</string> -->
    <string name="title_activity_add_available_charger">ChargeUp: AddAvailableChargery</string>
    <string name="title_activity_remove_available_charger">ChargeUp: RemoveAvailableCharger</string>

</resources>
