<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chargeuplogin.MainActivity" >

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:hint="@string/uname"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/username"
        android:layout_alignBottom="@+id/username"
        android:layout_alignParentLeft="true"
        android:text="@string/textview" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/username"
        android:hint="@string/strpassword"         
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password"
        android:layout_alignBottom="@+id/password"
        android:layout_alignParentLeft="true"
        android:text="@string/textview1" />

    <Button
        android:id="@+id/register"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/password"
        android:text="@string/strregister" />

    <Button
        android:id="@+id/login"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/register"
        android:layout_alignBottom="@+id/register"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/strlogin" />
    <Button
        android:id="@+id/resetpassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/login"
        android:text="@string/strreset"
        />
    <TextView 
        android:id="@+id/loginErrorMsg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/resetpassword"
        android:layout_alignParentLeft="true"        
        />
    

</RelativeLayout>
