<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chargeuplogin.ResetpasswordActivity" >

    <TextView
        android:id="@+id/textview1_reset"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="#003004"
        android:text="@string/str_textview1_reset"
        android:gravity="center"/>
    <TextView
        android:id="@+id/textview2_reset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textview1_reset"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="#003004"
        android:text="@string/str_textview2_reset"
        
        android:gravity="center"/>
    
    <TextView
        android:id="@+id/username_reset"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textview2_reset"
        android:layout_alignParentLeft="true"
        android:textSize="15sp"
        android:text="@string/str_username_reset"/>
    <TextView
        android:id="@+id/email_reset"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/username_reset"
        android:textSize="15sp"
        android:text="@string/str_email_reset"/>
    <EditText
        android:id="@+id/username_reset_e"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:hint="@string/str_username_reset_e"
        android:textColor="#000000"
        android:layout_below="@+id/textview2_reset"
        android:layout_alignParentRight="true"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/email_reset_e"
        android:inputType="textEmailAddress"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:hint="@string/str_email_reset_e"
        android:textColor="#000000"
        android:layout_below="@+id/username_reset_e"
        android:layout_alignParentRight="true"
        android:textSize="15sp"/>
    
    <Button
        android:id="@+id/btnReset_reset"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:text="@string/str_btnReset_reset" 
        android:layout_below="@+id/email_reset_e"
        android:layout_alignParentLeft="true"
        android:textSize="13sp"/>
    <Button
        android:id="@+id/btnCancel_reset"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:text="@string/str_btnCancel_reset" 
        android:layout_below="@+id/email_reset_e"
        android:layout_alignParentRight="true"
        android:textSize="13sp"/>
    <TextView
        android:id="@+id/alert_reset"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textSize="15sp"        
        />

</RelativeLayout>
