<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chargeuplogin.UpdateinfoActivity" >

    <TextView
        android:id="@+id/fname_update"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textSize="15sp"
        android:text="@string/strFname_update"        
        />
    <TextView
        android:id="@+id/lname_update"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fname_update"
        android:textSize="15sp"
        android:text="@string/strLname_update"        
        />
    <EditText
        android:id="@+id/fname_update_e"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:hint="@string/strFname_update_e"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:textSize="15sp"
        />
    <EditText
        android:id="@+id/lname_update_e"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:hint="@string/strLname_update_e"
        android:textColor="#000000"
        android:layout_below="@+id/fname_update_e"
        android:layout_alignParentRight="true"
        android:textSize="15sp"
        />
    <LinearLayout
        android:id="@+id/group3_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lname_update_e">
        <TextView
            android:id="@+id/avatar_update"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:text="@string/str_avatar_update"
            />
        <EditText
            android:id="@+id/avatar_update_e"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:hint="@string/str_avatar_update_e"
            android:textColor="#000000"
            android:textSize="15sp"/>
    </LinearLayout>
    <!--
    <LinearLayout
        android:id="@+id/group4_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/group3_update">
        <TextView
            android:id="@+id/score_update"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:text="@string/str_score_update"
            />
        <EditText
            android:id="@+id/score_update_e"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:hint="@string/str_score_update_e"
            android:textColor="#000000"
            android:textSize="15sp"/>        
    </LinearLayout>
      -->
    <LinearLayout
        android:id="@+id/group5_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/group3_update">
        <TextView
            android:id="@+id/bio_update"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:text="@string/str_bio_update"
            />
        <EditText
            android:id="@+id/bio_update_e"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:hint="@string/str_bio_update_e"
            android:textColor="#000000"
            android:textSize="15sp"/>        
    </LinearLayout>
    <LinearLayout
        android:id="@+id/group6_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/group5_update">
        <TextView
            android:id="@+id/major_update"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:text="@string/str_major_update"
            />
        <EditText
            android:id="@+id/major_update_e"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:hint="@string/str_major_update_e"
            android:textColor="#000000"
            android:textSize="15sp"/>        
    </LinearLayout>
    
    <Button
        android:id="@+id/btnUpdate_update"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:text="@string/strUpdate" 
        android:layout_below="@+id/group6_update"
        android:layout_alignParentLeft="true"
        android:textSize="13sp"/>
    <Button
        android:id="@+id/btnCancel_update"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:text="@string/strCancel" 
        android:layout_below="@+id/group6_update"
        android:layout_alignParentRight="true"
        android:textSize="13sp"/>
    
    <TextView
        android:id="@+id/errormsg_update"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textSize="15sp"        
        />
    
</RelativeLayout>
