<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chargeuplogin.ChangepasswordActivity" >

    <LinearLayout
        android:id="@+id/group1_chPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="40dp" >

        <TextView
            android:id="@+id/oldps"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:text="@string/str_oldps"
            android:textColor="#000000"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/oldps_e"
            android:inputType="textPassword"
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"
            android:hint="@string/str_oldps_e"
            />        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/group2_chPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="80dp" >

        <TextView
            android:id="@+id/newps"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:text="@string/str_newps"
            android:textColor="#000000"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/newps_e"
            android:inputType="textPassword"
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"
            android:hint="@string/str_newps_e"
            />        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/group3_chPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="120dp" >

        <TextView
            android:id="@+id/newps2"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:text="@string/str_newps2"
            android:textColor="#000000"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/newps2_e"
            android:inputType="textPassword"
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"
            android:hint="@string/str_newps2_e"
            />        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/group4_chPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="160dp" >

        <Button
            android:id="@+id/btnChpassword_chpassActivity"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:hint="@string/str_btnChpassword"
            android:textSize="14sp" />
        <Button
            android:id="@+id/btnGoback_chpass" 
            android:layout_width="140sp"  
            android:layout_height="wrap_content"
            android:hint="@string/str_btnGoback_chpass"
            android:textSize="14sp"
            />        
    </LinearLayout>

    <TextView
        android:id="@+id/errmsg_chPs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group4_chPassword"
        android:textSize="14sp"
        />

</RelativeLayout>
