<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chargeuplogin.RegisteredActivity" >
       
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/success_login"
            android:textColor="#000000"
            android:id="@+id/textView"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"/>

    <TextView
            android:layout_width="200dp"
            android:textColor="#000000"
            android:layout_height="40dp"
            android:text="@string/details_registered"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>
    <TextView
            android:layout_width="135dp"
            android:layout_height="40dp"
            android:text="@string/Username_registered"
            android:textColor="#000000"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:textSize="15sp"/>
    <TextView
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:id="@+id/uname"
            android:textColor="#000000"
            android:layout_below="@+id/textView2"
            android:layout_alignParentRight="true"
            android:textSize="15sp"/>
    <TextView
            android:layout_width="135dp"
            android:layout_height="40dp"
            android:text="@string/email_registered"
            android:textColor="#000000"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView9"
            android:layout_alignParentLeft="true"
            android:textSize="15sp"/>
    <TextView
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:id="@+id/email"
            android:textColor="#000000"
            android:layout_below="@+id/textView9"
            android:layout_alignParentRight="true"
            android:textSize="15sp"/>
    
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backtologin_registered"
            android:id="@+id/login"
            android:textColor="#000000"
            android:layout_below="@+id/email"
            android:textSize="13sp"
            android:layout_alignParentLeft="true"/>    

</RelativeLayout>
