<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chargeuplogin.LoginActivity" >

    
    <TextView
        android:id="@+id/textwelcome"
        android:layout_width="match_parent"        
        android:layout_height="40dp"
        android:textColor="#003004"
        android:textSize="15sp"
        android:gravity="center"
        />
    <LinearLayout
        android:id="@+id/group1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp" >
        <Button
            android:id="@+id/btchangepass"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:hint="@string/changeps_login"
            android:textColor="#000000"
            android:textSize="12sp" />
        <Button
            android:id="@+id/updateUserinfo"
            android:layout_width="138dp"
            android:layout_height="40dp"
            android:hint="@string/updateinfo_login"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/group2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp" >
        
        <Button
            android:id="@+id/btnRegisterCharger"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:hint="@string/str_registerCharger_login"
            android:textColor="#000000"
            android:textSize="12sp" />
        <Button
            android:id="@+id/btnDeleteCharger"
            android:layout_width="138dp"
            android:layout_height="40dp"
            android:hint="@string/str_deleteCharger_login"
            android:textColor="#000000"
            android:textSize="12sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/group3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp" >
        <LinearLayout
            android:id="@+id/group3_inside"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >
            <Button
            	android:id="@+id/findcharger"
            	android:layout_width="150sp"
            	android:layout_height="40dp"
            	android:hint="@string/findcharger_login" 
            	android:textSize="12sp"
            	android:textColor="#000000"/>
            <Button
            	android:id="@+id/addtolist"
            	android:layout_width="150sp"
            	android:layout_height="40dp"
            	android:hint="add/remove available" 
            	android:textSize="12sp"
            	android:textColor="#000000"/>
        </LinearLayout>
        
        <Button
            android:id="@+id/myaccount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/myaccount_login" 
            android:textSize="12sp"
            android:textColor="#000000"/>
        
        <!--<TextView
            android:id="@+id/userinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User's Info"
            android:textSize="18sp"
            android:textColor="#000000"/>
        
         
        <View
            android:layout_width="90sp"
            android:layout_height="2dip"
            android:background="#FF0000" />
    -->
        <!-- android:text="@string/userinfo_login" -->
        <TextView
            android:id="@+id/userPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:textSize="18sp"
            android:textColor="#000000"/>
    </LinearLayout>
    

    
    <Button
        android:id="@+id/logout"
        android:hint="@string/logout_login"        
        android:layout_width="80sp"
        android:layout_height="40dp"         
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>   

</RelativeLayout>
